# Proj2

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DataReaderClient.cpp  DataReaderClient.h  DataReaderServer.cpp  DataReaderServer.h  FileCacheManager.cpp  FileCacheManager.h  MatrixSearchable.cpp  MatrixSearchable.h  MySerialServer.cpp  MySerialServer.h  MySolver.cpp  MySolver.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Searchable.h  Searcher.h  Server.h  ServerClientArgs.h  Solver.h  Vertex.cpp  Vertex.h  Z1.txt  Z10.txt  Z2.txt  Z3.txt  Z4.txt  Z5.txt  Z6.txt  Z7.txt  (+4 more)
